[package]
name = "one-rust"
version = "0.1.0"
authors = ["idawnlight <idawn@live.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
chrono = { version = "0.4.13", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
sha2 = "0.9.1"
hex = "0.4.2"